v.net.distance manual: remove OS specific paths; break long lines
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67120 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.net.distance/v.net.distance.html
+++ b/vector/v.net.distance/v.net.distance.html
@@ -51,10 +51,12 @@ crosses, shortest paths are blue lines:
 
 <p><div class="code"><pre>
 # connect schools to streets as layer 2
-v.net input=streets_wake points=schools_wake output=streets_net1 operation=connect thresh=400 arc_layer=1 node_layer=2
+v.net input=streets_wake points=schools_wake output=streets_net1 \
+      operation=connect thresh=400 arc_layer=1 node_layer=2
 
 # connect hospitals to streets as layer 3
-v.net input=streets_net1 points=hospitals output=streets_net2 operation=connect thresh=400 arc_layer=1 node_layer=3
+v.net input=streets_net1 points=hospitals output=streets_net2 \
+      operation=connect thresh=400 arc_layer=1 node_layer=3
 
 # inspect the result
 v.category in=streets_net2 op=report
@@ -72,7 +74,7 @@ Example with streams of the NC sample data set.
 pollution.txt:
 634731.563206905|216390.501834892
 
-v.in.ascii input=C:\data\pollution.txt output=pollution
+v.in.ascii input=pollution.txt output=pollution
 
 # add table to vector
 v.db.addtable map=pollution
@@ -83,14 +85,17 @@ samples.txt:
 634893.462007813|216273.763350851
 634918.660011082|216254.949609689
 
-v.in.ascii input=C:\data\samples.txt output=samples
+v.in.ascii input=samples.txt output=samples
 
 # add table to vector
 v.db.addtable map=samples
 
 # connect samples and pollution to streams
-v.net -c input=streams points=samples output=streams_samples operation=connect node_layer=3 threshold=10
-v.net -c input=streams_samples points=pollution output=streams_samples_pollution operation=connect node_layer=4 threshold=10
+v.net -c input=streams points=samples output=streams_samples \
+         operation=connect node_layer=3 threshold=10 \
+v.net -c input=streams_samples points=pollution 
+         output=streams_samples_pollution operation=connect \
+         node_layer=4 threshold=10
 
 # check vector layers
 v.category input=streams_samples_pollution option=report               
@@ -126,7 +131,8 @@ kernel         0          0          0
 all            1          1          1
 
 # calculate distance between sample points and pollution point source
-v.net.distance input=streams_samples_pollution output=distance_samples_to_pollution from_layer=3 to_layer=4
+v.net.distance input=streams_samples_pollution \
+      output=distance_samples_to_pollution from_layer=3 to_layer=4
 
 # check results
 v.report map=distance_samples_to_pollution@vnettest option=length               
@@ -136,7 +142,6 @@ cat|tcat|dist|length
 3|1|231.446|231.446
 </pre></div>
 
-<p>
 <h2>SEE ALSO</h2>
 
 <em>
