SQL related manual entries: update some SQL examples to NC; fix db.select table calls
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67206 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/db.in.ogr/db.in.ogr.html
+++ b/scripts/db.in.ogr/db.in.ogr.html
@@ -17,7 +17,7 @@ columns through a descriptive file with same name as the CSV file, but .csvt ext
 <div class="code"><pre>
 # NOTE: create koeppen_gridcode.csvt first for automated type recognition
 db.in.ogr input=koeppen_gridcode.csv output=koeppen_gridcode
-db.select koeppen_gridcode
+db.select table=koeppen_gridcode
 </pre></div>
 
 <h3>Import DBF table</h3>
@@ -43,7 +43,7 @@ table, set the environmental variable PG_LIST_ALL_TABLES to YES before importing
 
 db.in.ogr input="PG:host=localhost dbname=ecad user=neteler" \
           db_table=ecad_verona_tmean output=ecad_verona_tmean
-db.select ecad_verona_tmean
+db.select table=ecad_verona_tmean
 db.describe -c ecad_verona_tmean
 </pre></div>
 
@@ -61,6 +61,7 @@ db.in.ogr input=address.xls db_table=address_data
 <h2>SEE ALSO</h2>
 
 <em>
+<a href="db.select.html">db.select</a>,
 <a href="v.in.ogr.html">v.in.ogr</a>,
 <a href="v.in.db.html">v.in.db</a>
 </em>
