--- a/vector/v.lrs/v.lrs.create/v.lrs.create.html
+++ b/vector/v.lrs/v.lrs.create/v.lrs.create.html
@@ -133,7 +133,7 @@ be shown:
 
 <div class="code"><pre>
 # show LRS table
-db.select route_lrs
+db.select table=route_lrs
 
 d.vect route_lrs col=blue width=2
 </pre></div>
