--- a/vector/v.lrs/v.lrs.segment/v.lrs.segment.html
+++ b/vector/v.lrs/v.lrs.segment/v.lrs.segment.html
@@ -34,7 +34,7 @@ d.erase
 d.vect route_lrs
 d.vect busstops disp=attr attr=cat size=10 bg=white lcol=blue yref=bottom
 d.vect busstops icon=basic/circle fcol=blue
-db.select route_lrs
+db.select table=route_lrs
 
 # show modified map
 d.vect route_lrs_new col=red
