v.to.db: apply patch from https://trac.osgeo.org/grass/ticket/2658 to fix units inconsistency
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67260 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.to.db/v.to.db.html
+++ b/vector/v.to.db/v.to.db.html
@@ -8,6 +8,8 @@ found or multiple categories were found. For line azimuths '-1' is used
 for closed lines (start equals end).
 
 <h2>NOTES</h2>
+Measures of lengths and areas are always reported in meters, unless the
+<em>unit</em> parameter is set.
 The units <em>miles</em>, <em>feet</em>, <em>meters</em> and
 <em>kilometers</em> are square for <em>option=area</em>.
 <p>Feet and acre units are always reported in their common versions
