--- a/raster/r.watershed/front/r.watershed.html
+++ b/raster/r.watershed/front/r.watershed.html
@@ -113,15 +113,27 @@ geographic region. Thus, any cells with negative values cannot have
 their surface runoff and sedimentation yields calculated accurately.
 
 <p>
-Output <b>tci</b> raster map contains topographic index TCI is
+Output <b>tci</b> raster map contains topographic index TCI,
 computed as
 <tt>ln(&alpha; / tan(&beta;))</tt> where &alpha; is the cumulative
 upslope area draining through a point per unit contour length and
 <tt>tan(&beta;)</tt> is the local slope angle. The TCI reflects the
 tendency of water to accumulate at any point in the catchment and the
-tendency for gravitaional forces to move that water downslope (Quinn
+tendency for gravitational forces to move that water downslope (Quinn
 et al. 1991).  This value will be negative if <tt>&alpha; /
 tan(&beta;) &lt; 1</tt>.
+
+<p>
+Output <b>spi</b> raster map contains stream power index SPI,
+computed as
+<tt>&alpha; * tan(&beta;)</tt> where &alpha; is the cumulative
+upslope area draining through a point per unit contour length and
+<tt>tan(&beta;)</tt> is the local slope angle. The SPI reflects the
+power of ater flow at any point in the catchment and the
+tendency for gravitational forces to move that water downslope (Moore
+et al. 1991).  This value will be negative if <tt>&alpha; &lt; 0</tt>, 
+i.e. for cells with possible surface runoff from outside of the current
+geographic region.
 
 <p>
 Output <b>drainage</b> raster map contains drainage direction.
@@ -485,6 +497,12 @@ Soil Loss Equation</i>, <b>Transactions of the ASAE</b> Vol 30(5).
 drainage networks from massive, radar-based elevation models with least 
 cost path search</i>, <b>Hydrol. Earth Syst. Sci.</b> Vol 15, 667-678.<br>
 DOI: <a href="http://dx.doi.org/10.5194/hess-15-667-2011">10.5194/hess-15-667-2011</a>
+
+<li>
+Moore I.D., Grayson R.B., Ladson A.R. (1991). <i>Digital terrain 
+modelling: a review of hydrogical, geomorphological, and biological 
+applications</i>, <b>Hydrological Processes</b>, Vol 5(1), 3-30<br> 
+DOI: <a href="http://dx.doi.org/10.1002/hyp.3360050103">10.1002/hyp.3360050103</a>
 
 <li>Quinn P., K. Beven K., Chevallier P., Planchon O. (1991). <i>The 
 prediction of hillslope flow paths for distributed hydrological modelling 
