--- a/vector/v.out.lidar/v.out.lidar.html
+++ b/vector/v.out.lidar/v.out.lidar.html
@@ -9,6 +9,13 @@ extent (see <em><a href="g.region.html">g.region</a></em>).
 The <b>where</b> option limits the export by attributes (applied only
 when the columns are used for export).
 
+<p>
+LAS format stores the coordinates as integers rounding the decimal places.
+Before that a scale is applied to preserve a certain number of decimal
+places. This scale can be set using <b>las_xyscale</b> and <b>las_xscale</b>
+options. For example, the scale value 0.01 will preserve two decimal
+places while the value 1.0 will preserve none.
+
 
 <h2>NOTES</h2>
 
