v.in.ascii: right translation for the Czech word kadibudka
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67352 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.in.ascii/v.in.ascii.html
+++ b/vector/v.in.ascii/v.in.ascii.html
@@ -231,7 +231,7 @@ The import works for 2D maps as well (no elev column and no '-z' flag).
 Generate a 3D points vector map 'points3d.dat' with attributes as ASCII file:
 <div class="code"><pre>
 593493.1|4914730.2|123.1|studna|well
-591950.2|4923000.5|222.3|kadibudka|closet
+591950.2|4923000.5|222.3|kadibudka|outhouse
 589860.5|4922000.0|232.3|hruska|pear
 590400.5|4922820.8|143.2|mysi dira|mouse hole
 593549.3|4925500.7|442.6|mineralni pramen|mineral spring
