--- a/vector/v.what.rast/v.what.rast.html
+++ b/vector/v.what.rast/v.what.rast.html
@@ -2,33 +2,41 @@
 
 <em>v.what.rast</em> retrieves raster value from a given raster map for each point
 or centroid stored in a given vector map. It can update a <b>column</b> in the linked
-vector attribute table with the retrieved raster cell value or print it. The column type
-needs to be numeric (integer, float, double, ...).
+vector attribute table with the retrieved raster cell value or print it.
+
+<p>The column type needs to be numeric (integer, float, double,
+...). If the column doesn't exist in the vector attribute table than
+the module will create the new column of type correspoding with the
+input raster map.
+
 <p>
 If the <b>-p</b> flag is used, then the attribute table is not updated
-and the results are printed to <tt>stdout</tt>.
+and the results are printed to standard output.
 <p>
 If the <b>-i</b> flag is used, then the value to be uploaded to the database
 is interpolated from the four nearest raster cells values using an inverse
 distance weighting method (IDW). This is useful for cases when the vector
 point density is much higher than the raster cell size.
-<p>
-Points and centroid with shared category number cannot be processed.
-To solved this, unique categories may be added with <em>v.category</em> in
-a separate layer.
 
 <h2>NOTES</h2>
 
+<p>
+Points and centroid with shared category number cannot be processed.
+To solved this, unique categories may be added
+with <em><a href="v.category.html">v.category</a></em> in a separate
+layer.
+
+<p>
 If multiple points have the same category, the attribute value is set to NULL.
 If the raster value is NULL, then attribute value is set to NULL.
 <p>
 <em>v.what.rast</em> operates on the attribute table. To modify the vector
-geometry instead, use <em>v.drape</em>.
+geometry instead, use <em><a href="v.drape.html">v.drape</a></em>.
 <p>
 Categories and values are output unsorted with the print flag. To sort them
 pipe the output of this module into the UNIX <tt>sort</tt> tool
 (<tt>sort&nbsp;-n</tt>). If you need coordinates, after sorting use
-<em>v.out.ascii</em> and the UNIX <tt>paste</tt> tool
+<em><a href="v.out.ascii.html">v.out.ascii</a></em> and the UNIX <tt>paste</tt> tool
 (<tt>paste&nbsp;-d'|'</tt>). In the case of a NULL result, a "<tt>*</tt>"
 will be printed in lieu of the value.
 <p>
@@ -57,8 +65,7 @@ g.copy vector=geodetic_pts,mygeodetic_pts
 # set computational region to raster map to be queried
 g.region raster=elev_state_500m -p
 
-# add new column to existing table
-v.db.addcolumn map=mygeodetic_pts column="height double precision"
+# query raster cells (a new column will be added to existing table)
 v.what.rast map=mygeodetic_pts raster=elev_state_500m column=height
 
 # compare official geodetic heights to those of elevation model
