minor syncs to trunk
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@67399 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/general/g.parser/g.parser.html
+++ b/general/g.parser/g.parser.html
@@ -527,6 +527,8 @@ printf ("Value of GIS_OPT_vect: '%s'\n", $ENV{'GIS_OPT_VECTOR'});
 </em>
 
 <p>
+Overview table: <a href="https://grass.osgeo.org/grass71/manuals/parser_standard_options.html">Parser standard options</a>
+<p>
 <a href="http://trac.osgeo.org/grass/wiki/Submitting/Python">Submitting rules for Python</a>
 
 <p>
