REQUIREMENTS.html: hint about xxx-devel packages added
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67413 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/REQUIREMENTS.html
+++ b/REQUIREMENTS.html
@@ -64,6 +64,8 @@ map formats<br>
 
 <h3>Optional requirements:</h3>
 
+Note: also the respective xxx-dev or xxx-devel packages need to be installed.
+
 <ul>
 
 <li><b>C++ Compiler</b> (required for the various C++ GRASS module)<br>
