r.watershed: fix typo in manual
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67422 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.watershed/front/r.watershed.html
+++ b/raster/r.watershed/front/r.watershed.html
@@ -129,7 +129,7 @@ computed as
 <tt>&alpha; * tan(&beta;)</tt> where &alpha; is the cumulative
 upslope area draining through a point per unit contour length and
 <tt>tan(&beta;)</tt> is the local slope angle. The SPI reflects the
-power of ater flow at any point in the catchment and the
+power of water flow at any point in the catchment and the
 tendency for gravitational forces to move that water downslope (Moore
 et al. 1991).  This value will be negative if <tt>&alpha; &lt; 0</tt>, 
 i.e. for cells with possible surface runoff from outside of the current
