Uploaded new ASTER 2 bands Albedo equation
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67435 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/imagery/i.albedo/i.albedo.html
+++ b/imagery/i.albedo/i.albedo.html
@@ -23,6 +23,13 @@ Maybe change input requirement of MODIS to [0.0-1.0]?
 <a href="i.vi.html">i.vi</a>
 </em>
 
+<h2>References</h2>
+For a 2 band determination of the Aster BB Albedo see the following:
+
+Salleh and Chan, 2014. Land Surface Albedo Determination: Remote Sensing and Statistical Validation. in proceedings of FIG 2014.
+
+https://www.fig.net/resources/proceedings/fig_proceedings/fig2014/papers/ts05g/TS05G_salleh_chan_6910.pdf
+
 <h2>AUTHOR</h2>
 
 Yann Chemin
