various typos fixed (via Debian lintian QA tool, contributor: sebastic; trac https://trac.osgeo.org/grass/ticket/2841)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67446 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/init/grass7.html
+++ b/lib/init/grass7.html
@@ -102,7 +102,7 @@ shell environment variables.
 <p>Note that you will need to set these variables using the
 appropriate method required for the UNIX shell that you use (e.g. in a
 Bash shell you must <tt>export</tt> the variables for them to
-propogate).
+propagate).
 
 <h3>User Interface Environment Variable</h3>
 
