--- a/raster/r.out.gdal/r.out.gdal.html
+++ b/raster/r.out.gdal/r.out.gdal.html
@@ -3,7 +3,7 @@
 <em>r.out.gdal</em> allows a user to export a GRASS raster map layer
 into any GDAL supported raster map format. If a GRASS raster map is
 exported for a particular application, the application's native format
-would be preferrable. GeoTIFF is supported by a wide range of
+would be preferable. GeoTIFF is supported by a wide range of
 applications (see also <b>NOTES</b> on GeoTIFF below).
 <p>To specify multiple creation options use a comma separated list
 (<em>createopt="TFW=YES,COMPRESS=DEFLATE"</em>).
