--- a/scripts/r.fillnulls/r.fillnulls.html
+++ b/scripts/r.fillnulls/r.fillnulls.html
@@ -13,7 +13,7 @@ linear spline interpolation with Tykhonov regularization.
 Each area boundary buffer is set to three times the map resolution to get nominally
 three points around the edge. This way the algorithm interpolates into the hole with
 a trained slope and curvature at the edges, in order to avoid that such a flat plane
-is generated in a hole. The widht of edge area can be adjusted by 
+is generated in a hole. The width of edge area can be adjusted by 
 changing the edge parameter.
 <p>During the interpolation following warning may occur when using the RST method:<p>
 <tt>
