make cube primary term and emph the that cuboid is rectangular
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67481 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster3d/raster3dintro.html
+++ b/raster3d/raster3dintro.html
@@ -45,7 +45,7 @@ The former is not the only only operation done with data
 and the latter could be confusing in case of 3D raster data.
 
 3D raster map is divided into cells in the same as the (2D) raster map.
-A cell is a cuboid or cube depending on the resolution.
+A cell is a cube or a (rectangular) cuboid depending on the resolution.
 The resolution influences volume of one cell.
 Some literature or other software may use terms such as volume, volume unit,
 volumetric pixel, volume pixel, or voxel.
