--- a/gui/wxpython/rlisetup/g.gui.rlisetup.html
+++ b/gui/wxpython/rlisetup/g.gui.rlisetup.html
@@ -62,8 +62,8 @@ The startup window shows your configuration files, you can:
  and other notes (disposition of sample areas etc).
 -->
  Configuration files are saved in the folder 
- <tt>C:\Users\userxy\.r.li\history\my_conf</tt> (MS-Windows) or 
- <tt>$HOME/.r.li/history/my_conf</tt> (GNU/Linux) (the file name can be 
+ <tt>C:\Users\userxy\AppData\Roaming\GRASS7\r.li\</tt> (MS-Windows) or 
+ <tt>$HOME/.r.li/</tt> (GNU/Linux) (the file name can be 
  defined by the user). The output or an analysis can either be a new raster
  map (in case of using a "moving window" analysis) or be an ASCII text file 
  (when not performing a "moving window" analysis) containing the result. 
