t.rast.series manual: added new examples; HTML cleanup (contributed by Vero Andreo)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67572 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/temporal/t.rast.algebra/t.rast.algebra.html
+++ b/temporal/t.rast.algebra/t.rast.algebra.html
@@ -1,7 +1,7 @@
 <h2>DESCRIPTION</h2>
 
-t.rast.algebra performs temporal and spatial map algebra operations on space time raster datasets (STRDS)
-by using the temporal raster algebra.
+t.rast.algebra performs temporal and spatial map algebra operations on
+space time raster datasets (STRDS) by using the temporal raster algebra.
 
 <h3>PROGRAM USE</h3>
 The module expects an <b>expression</b> as input parameter in the following form: <p>
@@ -331,10 +331,8 @@ int(x)                  convert x to integer [ truncates ]
 log(x)                  natural log of x
 sqrt(x)                 square root of x
 tan(x)                  tangent of x (x is in degrees)
-round(x)		            round x to nearest integer
-sin(x)			            sine of x (x is in degrees)
-sqrt(x)			            square root of x
-tan(x)			            tangent of x (x is in degrees)
+round(x)		round x to nearest integer
+sin(x)			sine of x (x is in degrees)
 isnull(x)               check if x = NULL
 isntnull(x)             check if x is not NULL
 null                    set null value
