--- a/temporal/t.rast.neighbors/t.rast.neighbors.html
+++ b/temporal/t.rast.neighbors/t.rast.neighbors.html
@@ -76,7 +76,7 @@ t.info smooth_tempmean_monthly
  +----------------------------------------------------------------------------+
 
 
-# new now compare the values between original data and the smoothed one
+# now compare the values between original data and the smoothed one
 t.rast.list input=smooth_tempmean_monthly columns=name,start_time,min,max
 
 t.rast.list input=smooth_tempmean_monthly columns=name,start_time,min,max
