--- a/temporal/t.register/t.register.html
+++ b/temporal/t.register/t.register.html
@@ -187,6 +187,7 @@ prec_7|PERMANENT|2001-07-01 00:00:00|2001-08-01 00:00:00
 <em>
 <a href="t.create.html">t.create</a>,
 <a href="t.info.html">t.info</a>
+<a href="https://grasswiki.osgeo.org/wiki/Temporal_data_processing/maps_registration">Maps registration examples in Temporal data processing Wiki</a>
 </em>
 
 <h2>AUTHOR</h2>
