manual: links to r.import and v.import added
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67574 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.in.bin/r.in.bin.html
+++ b/raster/r.in.bin/r.in.bin.html
@@ -120,6 +120,7 @@ r.in.bin in=gpcp_v2.2_psg.1979 out=gpcp_1979. \
 <h2>SEE ALSO</h2>
 
 <em>
+<a href="r.import.html">r.import</a>,
 <a href="r.out.bin.html">r.out.bin</a>,
 <a href="r.in.ascii.html">r.in.ascii</a>,
 <a href="r.out.ascii.html">r.out.ascii</a>,
