--- a/raster/r.in.png/r.in.png.html
+++ b/raster/r.in.png/r.in.png.html
@@ -5,7 +5,8 @@
 <h2>SEE ALSO</h2>
 
 <em>
-<a href="r.out.gdal.html">r.in.gdal</a>,
+<a href="r.import.html">r.import</a>,
+<a href="r.in.gdal.html">r.in.gdal</a>,
 <a href="r.out.png.html">r.out.png</a>
 </em>
 
