--- a/vector/v.external/v.external.html
+++ b/vector/v.external/v.external.html
@@ -82,12 +82,13 @@ maintaining attributes in external DBMS in also writable mode.
 <h2>SEE ALSO</h2>
 
 <em>
-  <a href="v.external.out.html">v.external.out</a>,
-  <a href="v.clean.html">v.clean</a>,
-  <a href="v.db.connect.html">v.db.connect</a>,
-  <a href="v.in.db.html">v.in.db</a>,
-  <a href="v.in.ogr.html">v.in.ogr</a>,
-  <a href="v.out.ogr.html">v.out.ogr</a>
+<a href="v.external.out.html">v.external.out</a>,
+<a href="v.clean.html">v.clean</a>,
+<a href="v.db.connect.html">v.db.connect</a>,
+<a href="v.import.html">v.import</a>,
+<a href="v.in.db.html">v.in.db</a>,
+<a href="v.in.ogr.html">v.in.ogr</a>,
+<a href="v.out.ogr.html">v.out.ogr</a>
 </em>
 
 <p>
