--- a/vector/v.in.ascii/v.in.ascii.html
+++ b/vector/v.in.ascii/v.in.ascii.html
@@ -292,8 +292,9 @@ cat $MAPSET/group/$GROUP/POINTS | v.in.ascii in=- out=$GROUP_gcp separator=space
 <a href="v.centroids.html">v.centroids</a>,
 <a href="v.clean.html">v.clean</a>,
 <a href="v.db.connect.html">v.db.connect</a>,
+<a href="v.import.html">v.import</a>,
 <a href="v.info.html">v.info</a>,
-<a href="v.out.ascii.html">v.out.ascii</a>,
+<a href="v.out.ascii.html">v.out.ascii</a>
 </em>
 
 <h2>AUTHORS</h2>
