--- a/vector/v.in.ogr/v.in.ogr.html
+++ b/vector/v.in.ogr/v.in.ogr.html
@@ -358,10 +358,14 @@ with <em><a href="v.proj.html">v.proj</a></em>.</dd>
 <a href="v.build.polylines.html">v.build.polylines</a>,
 <a href="v.edit.html">v.edit</a>,
 <a href="v.external.html">v.external</a>,
+<a href="v.import.html">v.import</a>,
 <a href="v.in.db.html">v.in.db</a>,
 <a href="v.in.e00.html">v.in.e00</a>,
 <a href="v.out.ogr.html">v.out.ogr</a>
 </em>
+
+<p>
+GRASS GIS Wiki page: Import of <a href="http://grasswiki.osgeo.org/wiki/Global_datasets">Global datasets</a>
 
 <h2>AUTHORS</h2>
 
