--- a/raster/r.external/r.external.html
+++ b/raster/r.external/r.external.html
@@ -65,12 +65,14 @@ GDAL Pages: <a href="http://www.gdal.org">http://www.gdal.org/</a><br>
 <h2>SEE ALSO</h2>
 
 <em>
+<a href="r.import.html">r.import</a>,
 <a href="r.in.gdal.html">r.in.gdal</a>,
 <a href="r.external.out.html">r.external.out</a>
 </em>
 
 <p>
 <em>
+<a href="v.import.html">v.import</a>,
 <a href="v.in.ogr.html">v.in.ogr</a>,
 <a href="v.external.html">v.external</a>,
 <a href="v.external.out.html">v.external.out</a>
