--- a/raster/r.in.ascii/r.in.ascii.html
+++ b/raster/r.in.ascii/r.in.ascii.html
@@ -96,6 +96,7 @@ null:                      -9999
 <h2>SEE ALSO</h2>
 
 <em>
+<a href="r.import.html">r.import</a>,
 <a href="r.out.ascii.html">r.out.ascii</a>,
 <a href="r.in.gdal.html">r.in.gdal</a>, 
 <a href="r.out.gdal.html">r.out.gdal</a>,
