--- a/raster/r.in.gdal/r.in.gdal.html
+++ b/raster/r.in.gdal/r.in.gdal.html
@@ -318,10 +318,12 @@ r.in.gdal HDF4_EOS:EOS_GRID:"MOD15A2.A2003153.h18v04.004.2003171141042.hdf":MOD_
 <h2>SEE ALSO</h2>
 <em>
 <a href="r.colors.html">r.colors</a>,
+<a href="r.import.html">r.import</a>,
 <a href="r.in.ascii.html">r.in.ascii</a>,
 <a href="r.in.bin.html">r.in.bin</a>,
 <a href="r.null.html">r.null</a>
 </em>
+
 <p>
 GRASS GIS Wiki page: Import of <a href="http://grasswiki.osgeo.org/wiki/Global_datasets">Global datasets</a>
 
