--- a/temporal/t.vect.observe.strds/t.vect.observe.strds.html
+++ b/temporal/t.vect.observe.strds/t.vect.observe.strds.html
@@ -8,9 +8,8 @@ The first input is a vector map layer with vector points. The second
 input is one or several space time raster datasets (STRDS) that should 
 be sampled over time at the vector point positions. The space time 
 raster dataset will be sampled over its whole temporal extent (from 
-start to end). The range can be adjusted using the temporal where 
-condition <em>t_where</em>. A column name must be specified for each 
-input space time raster dataset.
+start to end). A column name must be specified for each input space
+time raster dataset.
 <p>
 As results  a new space time vector dataset is generated that contains 
 a single (new) vector map that links to as many time stamped attribute 
