--- a/raster/r.in.ascii/r.in.ascii.html
+++ b/raster/r.in.ascii/r.in.ascii.html
@@ -101,8 +101,7 @@ null:                      -9999
 <a href="r.in.gdal.html">r.in.gdal</a>, 
 <a href="r.out.gdal.html">r.out.gdal</a>,
 <a href="r.in.bin.html">r.in.bin</a>,
-<a href="r3.in.ascii.html">r3.in.ascii</a>,
-<a href="http://grass.osgeo.org/gdp/html_grass5/ascii_formats.html">GRASS ASCII formats</a>
+<a href="r3.in.ascii.html">r3.in.ascii</a>
 </em>
 
 <h2>AUTHOR</h2>
