v.buffer: add more keywords
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67614 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.buffer/v.buffer.html
+++ b/vector/v.buffer/v.buffer.html
@@ -9,7 +9,7 @@ segments are generated).
 <h2>NOTES</h2>
 
 Internal buffers for areas can be generated with negative distance 
-values ("inward buffer" or "negative buffer").
+values ("inward buffer" or "negative buffer" or "shrinking").
 <p>
 <em>v.buffer</em> fusions the geometries of buffers by default.
 Categories and attribute table will not be transferred (this would
