r.grow.distance: new flag to calculate distance to nearest NULL cell (trac #2368)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67620 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.grow.distance/r.grow.distance.html
+++ b/raster/r.grow.distance/r.grow.distance.html
@@ -6,6 +6,9 @@ value of the nearest non-null cell.
 
 <h2>NOTES</h2>
 
+The flag <b>-n</b> calculates the respective pixel distances to the
+nearest NULL cell.
+<p>
 The user has the option of specifying five different metrics which
 control the geometry in which grown cells are created, (controlled by
 the <b>metric</b> parameter): <i>Euclidean</i>, <i>Squared</i>,
