--- a/imagery/i.evapo.mh/i.evapo.mh.html
+++ b/imagery/i.evapo.mh/i.evapo.mh.html
@@ -1,9 +1,7 @@
 <h2>DESCRIPTION</h2>
 
 <em>i.evapo.mh</em> calculates the reference evapotranspiration (ET) after
-Hargreaves (1985) and the Modified Hargreaves (2001). 
-
-<!-- TODO Hargreaves (2001) citation missing! -->
+Hargreaves et al. (1985), Hargreaves and Samani (1985) and the Modified Hargreaves version found in Droogers and Allen (2002). 
 
 <h2>SEE ALSO</h2>
 
@@ -20,7 +18,6 @@ Hargreaves (1985) and the Modified Hargreaves (2001).
 <li> Hargreaves GL, Hargreaves GH, Riley JP, 1985. Agricultural benefits for
 Senegal River Basin. Journal of Irrigation and Drainange Engineering,
 ASCE, 111(2):113-124.</li>
-<li> Hargreaves, 2001 - incomplete</li>
 <li> Droogers P, Allen RG, 2002. Towards a simplified global reference
 evapotranspiration equation. Irrigation Science.</li>
 <li> Droogers, P., Allen RG. 2002. Estimating reference evapotranspiration
@@ -32,6 +29,6 @@ under inaccurate data conditions. Irrigation and Drainage Systems 16: 33-45.</li
 
 <h2>AUTHORS</h2>
 
-Yann Chemin, GRASS Development team, 2007-2011<br>
+Yann Chemin, GRASS Development team, 2007-2016<br>
 
 <p><i>Last changed: $Date$</i>
