manual: avoid specific gender; HTML cosmetics
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67694 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/display/d.mon/d.mon.html
+++ b/display/d.mon/d.mon.html
@@ -42,7 +42,7 @@ explicitly selecting the monitor for output. Only running monitors can
 be selected for graphics output.
 
 <p>The user can run multiple graphics monitors by simply starting each of
-the graphics monitors he wishes to direct output to.
+the graphics monitors the user wishes to direct output to.
 
 <h3>Releasing (unselecting) a monitor</h3>
 
