--- a/general/g.gisenv/g.gisenv.html
+++ b/general/g.gisenv/g.gisenv.html
@@ -73,9 +73,9 @@ which fall under the same <em>LOCATION_NAME</em> all contain data
 geographically relevant to the <em>LOCATION_NAME</em>, and all store
 data in the same map coordinate system.  Frequently, maps are placed
 into different mapsets to distinguish file ownership - e.g., each user
-might have his own mapset, storing any maps that he has created and/or
-are relevant to his work.) During each GRASS session, the user must
-choose one mapset to be the <em>current mapset</em>; the current
+might have one or more own mapset(s), storing any maps that the user has
+created and/or are relevant to the own work.) During each GRASS session, the
+user must choose one mapset to be the <em>current mapset</em>; the current
 mapset setting is given by <em>MAPSET</em>, and is a subdirectory
 of <em>LOCATION_NAME</em>.  During a single GRASS session, the user
 can use available data in any of the mapsets stored under the
