--- a/general/g.mapsets/g.mapsets.html
+++ b/general/g.mapsets/g.mapsets.html
@@ -19,7 +19,7 @@ mapset with a session).
 
 <p>
 The user can add, modify, and delete data layers that exist under
-his <em>current mapset</em>. Although the user can
+their <em>current mapset</em>. Although the user can
 also <em>access</em> (i.e., use) data that are stored under
 <em>other</em> mapsets in the same GRASS location using the
 <tt>mapname@mapsetname</tt> notation or mapset search path, the user
@@ -42,7 +42,7 @@ may be called in such a manner.
 GRASS location, lists mapsets to which the user currently has access,
 and lists the order in which accessible mapsets will be accessed by
 GRASS programs searching for data files.  The user is then given the
-opportunity to add or delete mapset names from his search path, or
+opportunity to add or delete mapset names from the search path, or
 modify the order in which mapsets will be accessed.
 
 <p>
