--- a/gui/wxpython/rlisetup/g.gui.rlisetup.html
+++ b/gui/wxpython/rlisetup/g.gui.rlisetup.html
@@ -144,7 +144,7 @@ The startup window shows your configuration files, you can:
 	  <li><em>Select areas from the overlaid vector map</em>: 
 	 the sample areas are defined by the vector map selected above.
 	 For every cat in vector map, the procedure prompts the 
-	 user if he wants to include it as sample area.
+	 user if they want to include it as sample area.
 	 The resulting configuration file can be used only with the 
 	 specified raster map, and the procedure can be used only if
 	 whole map layer is selected as sampling frame.</li>
