--- a/imagery/i.rgb.his/i.rgb.his.html
+++ b/imagery/i.rgb.his/i.rgb.his.html
@@ -5,8 +5,8 @@ processes three input raster map layers as red, green, and
 blue components and produces three output raster map layers
 representing the hue, intensity, and saturation of the
 data.  The output raster map layers are created by a
-standard red-green-blue (rgb) to hue-intensity-saturation
-(his) color transformation.  Each output raster map layer
+standard red-green-blue (RGB) to hue-intensity-saturation
+(HIS) color transformation.  Each output raster map layer
 is given a linear gray scale color table.  The current
 geographic region definition and mask settings are
 respected.
