--- a/raster/r.cross/r.cross.html
+++ b/raster/r.cross/r.cross.html
@@ -86,12 +86,7 @@ In the above example, the category labels would be:
 
 A random color table is also generated for the <em>output</em> map layer. 
 
-<h2>NOTES</h2>
-
-When run non-interactively, <em>r.cross</em> will not protect existing 
-files in the user's mapset. If the user specifies an <em>output</em> 
-file name that already exists in his mapset, the existing file will 
-be overwritten by the new <em>r.cross</em> output. 
+<!-- TODO: add example -->
 
 <h2>SEE ALSO</h2>
 
