--- a/general/g.copy/g.copy.html
+++ b/general/g.copy/g.copy.html
@@ -1,8 +1,8 @@
 <h2>DESCRIPTION</h2>
 
-A user may access data stored under the other mapsets listed in his
+A user may access data stored under the other mapsets listed in their
 mapset search path. However, the user may only modify data stored
-under his own current mapset. <em>g.copy</em> allows the user to copy
+under their own current mapset. <em>g.copy</em> allows the user to copy
 existing data files <b>from</b> other mapsets <b>to</b> the user's
 current mapset ($MAPSET). The files to be copied must exist in the
 user's current mapset search path and location; output is sent to the
