--- a/imagery/i.his.rgb/i.his.rgb.html
+++ b/imagery/i.his.rgb/i.his.rgb.html
@@ -5,8 +5,8 @@ processes three input raster map layers as hue, intensity
 and saturation components and produces three output raster
 map layers representing the red, green and blue components
 of this data.  The output raster map layers are created by
-a standard hue-intensity-saturation (his) to red-green-blue
-(rgb) color transformation.  Each output raster map layer
+a standard hue-intensity-saturation (HIS) to red-green-blue
+(RGB) color transformation.  Each output raster map layer
 is given a linear gray scale color table.  The current
 geographic region and mask settings are respected.
 
